--- a/app/global.scss
+++ b/app/global.scss
@@ -64,3 +64,13 @@ a {
 footer a {
   text-decoration: underline;
 }
+
+h3, .MuiTypography-h3 {
+  font-family: "EB Garamond", serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 3rem;
+  line-height: 1.167;
+  letter-spacing: 0em;
+}
