--- a/app/global.scss
+++ b/app/global.scss
@@ -68,9 +68,19 @@ footer a {
 h3, .MuiTypography-h3 {
   font-family: "EB Garamond", serif;
   font-optical-sizing: auto;
-  font-weight: 700;
+  font-weight: 500;
   font-style: normal;
   font-size: 3rem;
   line-height: 1.167;
   letter-spacing: 0em;
+}
+
+
+h1, .MuiTypography-h1 {
+  font-family: "EB Garamond", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 5rem;
+  line-height: 1.167;
 }
