--- a/app/global.scss
+++ b/app/global.scss
@@ -65,6 +65,16 @@ footer a {
   text-decoration: underline;
 }
 
+.MuiCardContent-root {
+  font-family: "EB Garamond", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 3rem;
+  line-height: 1.167;
+  letter-spacing: 0em;
+}
+
 h3, .MuiTypography-h3 {
   font-family: "EB Garamond", serif;
   font-optical-sizing: auto;
@@ -83,4 +93,29 @@ h1, .MuiTypography-h1 {
   font-style: normal;
   font-size: 5rem;
   line-height: 1.167;
+}
+
+.resultsTable {
+  width: 100%;
+}
+
+.resultsTable th {
+  text-align: left;
+  padding: 3px;
+}
+
+.resultsTable td {
+  padding: 3px;
+  
+}
+.positionCell {
+  width: 38px;
+  height: 38px;
+}
+td.nameCell, th.nameCell {
+  padding-left: 10px;
+}
+
+.resultsTable tr:nth-child(odd) td {
+  background-color: #EAECED;
 }
